# navision_gdpdu

./: .gitignore  CMakeLists.txt  Makefile  README.md  claude.md  extension_config.cmake  gaw_2025_saldenliste.xlsx  vcpkg.json
.cache/clangd/index/: folder_importer.cpp.931B3B7D97875D43.idx  folder_importer.hpp.A5C0B241021EE929.idx  gdpdu_data_parser.cpp.C9155A08B0B6234E.idx  gdpdu_data_parser.hpp.CF5A80C1BD2645ED.idx  gdpdu_exporter.cpp.CFF068E770AE4F2F.idx  gdpdu_exporter.hpp.4D768C4003DE981E.idx  gdpdu_extension.cpp.FDD3C66B8CC2A489.idx  gdpdu_extension.hpp.62BB4260B828DBE9.idx  gdpdu_importer.cpp.7AF6FA8C3FDA8DE3.idx  gdpdu_importer.hpp.BA4B52C002F97399.idx  gdpdu_parser.cpp.F8795684C602BBA5.idx  gdpdu_parser.hpp.4D956716D81237C6.idx  gdpdu_schema.cpp.88F8C8A0B3C33277.idx  gdpdu_schema.hpp.F593C9164EFCAE46.idx  gdpdu_table_creator.cpp.AC63A21BFA280FDC.idx  gdpdu_table_creator.hpp.D9B45A37D2DD6184.idx  gdpdu_xml_parser.cpp.D021094932CF21A2.idx  gdpdu_xml_parser.hpp.E129312E99F7852D.idx  generic_xml_importer.cpp.629914110F834D10.idx  generic_xml_importer.hpp.452A3E900460553F.idx  generic_xml_parser.cpp.23508A9AD6231A1F.idx  generic_xml_parser.hpp.B9314342A5F14F07.idx  xml_parser_config.hpp.246814A7538B8D80.idx  xml_parser_factory.cpp.8E181F59DB534FC4.idx  xml_parser_factory.hpp.23710C06DF0C5A42.idx  xml_parser_registration.cpp.3B96F0922CA8E003.idx  xml_parser_registration.hpp.A8C51DCE1865819D.idx
.github/: .gitignore
.github/workflows/: linux-build-on-push.yml  macos-build-on-push.yml  windows-build-on-push.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-xml-parser/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-table-creation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-data-parser/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-integration/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/phases/06-webdav-client/: 06-01-PLAN.md  06-01-SUMMARY.md  06-01-VERIFICATION.md
.planning/phases/07-zip-extraction/: 07-01-PLAN.md  07-01-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-batch-import-integration/: 08-01-PLAN.md  08-01-SUMMARY.md  08-VERIFICATION.md
src/: CMakeLists.txt  buchungsstapel_importer.cpp  folder_importer.cpp  gdpdu_data_parser.cpp  gdpdu_exporter.cpp  gdpdu_extension.cpp  gdpdu_importer.cpp  gdpdu_parser.cpp  gdpdu_schema.cpp  gdpdu_table_creator.cpp  gdpdu_xml_parser.cpp  generic_xml_importer.cpp  generic_xml_parser.cpp  nextcloud_importer.cpp  webdav_client.cpp  xml_parser_factory.cpp  xml_parser_registration.cpp  zip_extractor.cpp
src/include/: buchungsstapel_importer.hpp  folder_importer.hpp  gdpdu_data_parser.hpp  gdpdu_exporter.hpp  gdpdu_extension.hpp  gdpdu_importer.hpp  gdpdu_parser.hpp  gdpdu_schema.hpp  gdpdu_table_creator.hpp  gdpdu_xml_parser.hpp  generic_xml_importer.hpp  generic_xml_parser.hpp  nextcloud_importer.hpp  webdav_client.hpp  xml_parser_config.hpp  xml_parser_factory.hpp  xml_parser_registration.hpp  zip_extractor.hpp
test/: run_tests.sql
test/fixtures/basic_gdpdu/: buchungen.txt  index.xml  kunden.txt
test/fixtures/invalid_dates/: daten.txt  index.xml
test/fixtures/wrong_delimiter/: daten.txt  index.xml
